# scrape_insta

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
src/: config.py  excel.py  filter.py  lang.py  main.py  profile.py  progress.py  scraper.py
tests/: test_excel.py  test_filter.py  test_lang.py  test_scraper.py
tests/fixtures/: apify_hashtag_sample.json  apify_profile_sample.json
