[project]
name = "asakusa-influencer-leads"
version = "0.1.0"
description = "Daily auto-collector of foreign micro-influencer candidates posting from Asakusa, Tokyo. Outputs to Google Sheets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=1.8.0",
    "lingua-language-detector>=2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
